k8s/etests-django/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etests-django
  labels:
    app: etests-django
  annotations:
    kubernetes.io/ingress.global-static-ip-name: etests-django
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: etests-django
      port:
        number: 80
